--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,12 @@
 
         <Button
             android:id="@+id/btnComenzar"
-            android:layout_width="284dp"
-            android:layout_height="130dp"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="124dp"
+            android:layout_width="285dp"
+            android:layout_height="122dp"
+            android:layout_marginStart="63dp"
+            android:layout_marginTop="57dp"
+            android:layout_marginEnd="63dp"
+            android:layout_marginBottom="34dp"
             android:background="@drawable/rectangulo"
             android:backgroundTint="#C6AF8D"
             android:baselineAligned="false"
@@ -27,31 +29,30 @@
             android:onClick="onClick"
             android:text="Comenzar"
             android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/btnRepe"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/btnRepe"
-            android:layout_width="286dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="288dp"
-            android:background="@drawable/rectangulo"
-            android:backgroundTint="#C6AF8D"
-            android:baselineAligned="false"
-            android:fontFamily="serif"
-            android:onClick="onClick"
-            android:text="Repetir"
-            android:textSize="24sp"
+        <ImageButton
+            android:id="@+id/btnMicro"
+            android:layout_width="137dp"
+            android:layout_height="111dp"
+            android:layout_marginBottom="37dp"
+            android:background="@android:drawable/divider_horizontal_dim_dark"
+            android:src="@drawable/baseline_mic_24"
+            app:layout_constraintBottom_toTopOf="@+id/btnVelocidad"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/btnInformacion" />
 
         <Button
             android:id="@+id/btnInformacion"
-            android:layout_width="286dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="376dp"
+            android:layout_width="285dp"
+            android:layout_height="57dp"
+            android:layout_marginStart="62dp"
+            android:layout_marginEnd="62dp"
+            android:layout_marginBottom="22dp"
             android:background="@drawable/rectangulo"
             android:backgroundTint="#C6AF8D"
             android:baselineAligned="false"
@@ -59,31 +60,35 @@
             android:onClick="onClick"
             android:text="+ Informacion"
             android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/btnMicro"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/btnRepe" />
 
         <Button
-            android:id="@+id/btnMicro"
-            android:layout_width="130dp"
-            android:layout_height="108dp"
-            android:layout_marginStart="136dp"
-            android:layout_marginTop="476dp"
-            android:background="@drawable/micro_icon"
+            android:id="@+id/btnRepe"
+            android:layout_width="281dp"
+            android:layout_height="56dp"
+            android:layout_marginStart="62dp"
+            android:layout_marginEnd="62dp"
+            android:layout_marginBottom="36dp"
+            android:background="@drawable/rectangulo"
             android:backgroundTint="#C6AF8D"
             android:baselineAligned="false"
-            android:contentDescription="@string/app_name"
             android:fontFamily="serif"
-            android:textSize="16sp"
             android:onClick="onClick"
+            android:text="Repetir"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/btnInformacion"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/btnComenzar" />
 
         <Button
             android:id="@+id/btnVelocidad"
-            android:layout_width="90dp"
-            android:layout_height="51dp"
-            android:layout_marginStart="156dp"
-            android:layout_marginTop="608dp"
+            android:layout_width="140dp"
+            android:layout_height="53dp"
+            android:layout_marginBottom="27dp"
             android:background="@drawable/rectangulo"
             android:backgroundTint="#C6AF8D"
             android:baselineAligned="false"
@@ -92,8 +97,10 @@
             android:text="x 1"
             android:textAllCaps="false"
             android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/btnMicro" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
