--- a/app/src/main/res/layout/configuracion.xml
+++ b/app/src/main/res/layout/configuracion.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="26dp"
+        android:layout_marginBottom="11dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/textView11"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="60dp"
             android:background="@color/Principal_Oscuro"
             android:fontFamily="serif"
             android:foregroundTint="#F6F4F4"
@@ -34,18 +34,39 @@
             android:textSize="34sp" />
     </LinearLayout>
 
+    <Switch
+        android:id="@+id/swRepeticion"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="14dp"
+        app:layout_constraintBottom_toTopOf="@+id/swVolumen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+    <Switch
+        android:id="@+id/swVolumen"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginBottom="13dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/swRepeticion" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="61dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="65dp"
         android:fontFamily="serif"
         android:text="Activar repetición "
         android:textColor="#FBFAFA"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/swVolumen"
         app:layout_constraintEnd_toStartOf="@+id/swRepeticion"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -55,156 +76,91 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="49dp"
+        android:layout_marginBottom="52dp"
         android:fontFamily="serif"
         android:text="Volumen al máximo"
         android:textColor="#FBFAFA"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/swVolumen"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <Switch
-        android:id="@+id/swVolumen"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="39dp"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <Switch
-        android:id="@+id/swRepeticion"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="31dp"
-        android:layout_marginBottom="9dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="12dp"
-        android:fontFamily="serif"
-        android:text="Compartir tu información"
-        android:textColor="#FBFAFA"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/swInformación"
-        app:layout_constraintEnd_toStartOf="@+id/swInformación"
+        app:layout_constraintEnd_toStartOf="@+id/swVolumen"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginEnd="51dp"
+
+        android:layout_marginBottom="25dp"
         android:fontFamily="serif"
         android:text="Configuración de la aplicación"
         android:textAlignment="center"
         android:textColor="#FBFAFA"
-
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/swInformación"
+        app:layout_constraintBottom_toTopOf="@+id/btnBaseDatos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/swVolumen" />
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="33dp"
+        android:layout_width="248dp"
+        android:layout_height="68dp"
+        android:layout_marginBottom="26dp"
         android:fontFamily="serif"
         android:text="Al iniciar la aplicación"
         android:textAlignment="center"
-        android:textColor="#FBFAFA"
 
+        android:textColor="#FBFAFA"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/swRepeticion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
-
-    <Switch
-        android:id="@+id/swInformación"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="3dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnBaseDatos"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="23dp"
+        android:layout_marginBottom="14dp"
         android:fontFamily="serif"
         android:text="Actualizar Base de datos"
         android:textColor="#FBFAFA"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnBaseDatos"
         app:layout_constraintEnd_toStartOf="@+id/btnBaseDatos"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnBaseDatos" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnBaseDatos"
-        android:layout_width="79dp"
-        android:layout_height="71dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="37dp"
+        android:layout_width="80dp"
+        android:layout_height="66dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/base_datos_icon"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/swInformación" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:fontFamily="serif"
-        android:text="Leer condiciones de uso"
-        android:textColor="#FBFAFA"
-        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnBaseDatos" />
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <Button
         android:id="@+id/btnGuardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="27dp"
-        android:layout_marginBottom="51dp"
+        android:layout_marginBottom="41dp"
         android:fontFamily="serif"
         android:text="GUARDAR"
         android:textAlignment="center"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnBaseDatos" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
